force-app/main/default/objects/Important_Object_Field__mdt/Important_Object_Field__mdt.object-meta.xml
<CustomObject>
    <label>Important Object Field</label>
    <pluralLabel>Important Object Fields</pluralLabel>
</CustomObject>