force-app/main/default/objects/Important_Object_Field__mdt/fields/Field_API__c.field-meta.xml
<CustomField>
    <fullName>Field_API__c</fullName>
    <label>Field API</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>