force-app/main/default/objects/Important_Object_Field__mdt/fields/Object_API__c.field-meta.xml
<CustomField>
    <fullName>Object_API__c</fullName>
    <label>Object API</label>
    <length>50</length>
    <type>Text</type>
</CustomField>