force-app/main/default/objects/Important_Object_Field__mdt/fields/Track_Delete__c.field-meta.xml
<CustomField>
    <fullName>Track_Delete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Track Delete</label>
    <type>Checkbox</type>
</CustomField>